rename yarn script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --mode development --host 192.168.1.26 --port 8080",
-    "start": "webpack -p"
+    "build": "webpack -p"
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.18",
